# Generated by Django 5.1.4 on 2026-06-07 12:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="SiteConfig",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                (
                    "app_name",
                    models.CharField(
                        default="EduTutor IA",
                        help_text="Nom affiché dans l'en-tête et les emails.",
                        max_length=80,
                    ),
                ),
                (
                    "allow_signups",
                    models.BooleanField(
                        default=True,
                        help_text="Si désactivé, plus aucune inscription n'est possible (le login reste ouvert).",
                    ),
                ),
                (
                    "require_email_verification",
                    models.BooleanField(
                        default=False,
                        help_text="Si activé, un email confirmé est requis pour générer des quiz.",
                    ),
                ),
                (
                    "banner_enabled",
                    models.BooleanField(
                        default=False,
                        help_text="Afficher une bannière d'information à tous les utilisateurs.",
                    ),
                ),
                (
                    "banner_message",
                    models.TextField(
                        blank=True,
                        default="",
                        help_text="Texte de la bannière globale (maintenance, annonce…).",
                    ),
                ),
                ("updated_at", models.DateTimeField(auto_now=True)),
            ],
            options={
                "verbose_name": "Configuration du site",
                "verbose_name_plural": "Configuration du site",
            },
        ),
    ]
