# Generated by Django 5.1.4 on 2026-06-07 12:31

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = []

    operations = [
        migrations.CreateModel(
            name="LLMConfig",
            fields=[
                (
                    "id",
                    models.BigAutoField(
                        auto_created=True, primary_key=True, serialize=False, verbose_name="ID"
                    ),
                ),
                (
                    "backend",
                    models.CharField(
                        blank=True,
                        default="",
                        help_text="Fournisseur actif. Vide = utiliser LLM_BACKEND du .env.",
                        max_length=20,
                    ),
                ),
                (
                    "model",
                    models.CharField(
                        blank=True,
                        default="",
                        help_text="Modèle pour le fournisseur actif. Vide = défaut du .env.",
                        max_length=120,
                    ),
                ),
                (
                    "api_keys",
                    models.JSONField(
                        blank=True,
                        default=dict,
                        help_text="Clés API par fournisseur : {provider: clé}. Stockées en base.",
                    ),
                ),
                (
                    "ollama_host",
                    models.CharField(
                        blank=True,
                        default="",
                        help_text="URL du serveur Ollama. Vide = OLLAMA_HOST du .env.",
                        max_length=200,
                    ),
                ),
                (
                    "timeout",
                    models.PositiveIntegerField(
                        blank=True,
                        help_text="Timeout (s) override. Vide = défaut selon le fournisseur.",
                        null=True,
                    ),
                ),
                ("updated_at", models.DateTimeField(auto_now=True)),
            ],
            options={
                "verbose_name": "Configuration LLM",
                "verbose_name_plural": "Configuration LLM",
            },
        ),
    ]
